--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pyvista = "^0.36.1"
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 black = "^22.10.0"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
