--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,15 @@ authors = ["Vikram <vikramsingh001@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pyvista = "^0.36.1"
+scipy = "^1.9.3"
+numpy = "^1.23.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 black = "^22.10.0"
 pytest = "^7.1.3"
+ipykernel = "^6.17.0"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
