--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 pyvista = "^0.36.1"
 scipy = "^1.9.3"
 numpy = "^1.23.4"
+meshio = "^5.3.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
