--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,14 @@ pyvista = "^0.37.0"
 scipy = "^1.9.3"
 numpy = "^1.23.4"
 meshio = "^5.3.4"
+pygmsh = "^7.1.17"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^5.0.4"
 black = "^22.10.0"
 pytest = "^7.1.3"
 ipykernel = "^6.17.0"
+ipyvtklink = "^0.2.3"
 
 
 [build-system]
